# inspired by https://github.com/letsgetrusty/grpc_example
[package]
name = "grpc_echo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "echo-server"
path = "src/server.rs"

[[bin]]
name = "echo-client"
path = "src/client.rs"

[dependencies]
tonic = "0.8"
prost = "0.11"
prost-types = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3"

[build-dependencies]
tonic-build = "0.8.0"